--- a/GrupoVimar/Views/Home/Privacy.cshtml
+++ b/GrupoVimar/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacidad";
+    ViewData["Title"] = "Politicas";
 }
-<h1>@ViewData["Title"]politicas de privacidad</h1>
+<h1>@ViewData["Title"] de Privacidad</h1>
 
 <p>Grupo Vimar </p>
