--- a/GrupoVimar/Views/Shared/_Layout.cshtml
+++ b/GrupoVimar/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <!DOCTYPE html>
 <html lang="en">
@@ -32,6 +32,10 @@
                 <!-- Contenido del navbar -->
                 <div class="collapse navbar-collapse" id="navbarContent">
                     <ul class="navbar-nav me-auto">
+
+                        <partial name="_LoginPartial" />
+
+
                         <!-- Ítems del menú con iconos -->
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Home" asp-action="Index">
